nav section added

--- a/index.html
+++ b/index.html
@@ -4,16 +4,48 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hockey</title>
+    <!-- font awesome -->
+    <script src="https://kit.fontawesome.com/58baa362ab.js" crossorigin="anonymous"></script>
+    <!-- tailwind and daisy -->
+    <link href="https://cdn.jsdelivr.net/npm/daisyui@4.6.0/dist/full.min.css" rel="stylesheet" type="text/css" />
+    <script src="https://cdn.tailwindcss.com"></script>
+    <!-- google font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+    <!-- custom css -->
+    <style>
+        .manrope-font {
+            font-family: 'Manrope', sans-serif;
+        }
+    </style>
 </head>
-<body>
+<body class="manrope-font ">
     <header>
-
+        <nav>
+            <div class="flex flex-row items-center  lg:justify-around my-6">
+                <div class="text-4xl text-[#131318] font-extrabold">
+                    <h2>Hockey <span class="text-red-600">’</span>s</h2>
+                </div>
+                <div class="space-x-4">
+                    <a class="text-red-500" href="#">Home</a>
+                    <a href="#">About</a>
+                    <a href="#">Pages</a>
+                    <a href="#">Blog</a>
+                    <a href="#">Contact</a>
+                </div>
+                <div class="space-x-4">
+                    <i class="fa-solid fa-magnifying-glass"></i>
+                    <button class="bg-[#FF4240] text-white py-4 px-6 rounded-lg"> Get Ticket  </button>
+                </div>
+            </div>
+        </nav>
     </header>
     <main>
 
     </main>
     <footer>
-        
+
     </footer>
 </body>
 </html>
