--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         }
     </style>
 </head>
-<body class="manrope-font ">
+<body class="manrope-font container mx-auto ">
     <header>
         <nav>
             <div class="flex flex-row items-center  lg:justify-around my-6">
@@ -40,6 +40,32 @@
                 </div>
             </div>
         </nav>
+        <!-- carousel section -->
+        <section>
+            <div class="carousel h-[70vh]">
+                <div id="slide1" class="carousel-item relative w-full">
+                  <img src="Images/1.png" class="w-full" />
+                  <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                    <a href="#slide4" class="btn btn-circle">❮</a> 
+                    <a href="#slide2" class="btn btn-circle">❯</a>
+                  </div>
+                </div> 
+                <div id="slide2" class="carousel-item relative w-full">
+                  <img src="Images/2.png" class="w-full" />
+                  <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                    <a href="#slide1" class="btn btn-circle">❮</a> 
+                    <a href="#slide3" class="btn btn-circle">❯</a>
+                  </div>
+                </div> 
+                <div id="slide3" class="carousel-item relative w-full">
+                  <img src="Images/3.png" class="w-full" />
+                  <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                    <a href="#slide2" class="btn btn-circle">❮</a> 
+                    <a href="#slide4" class="btn btn-circle">❯</a>
+                  </div>
+                </div> 
+              </div>
+        </section>
     </header>
     <main>
 
