progress bar added

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             </div>
         </nav>
         <!-- carousel section -->
-        <section>
+        <section class="py-8">
             <div class="carousel h-[70vh]">
                 <div id="slide1" class="carousel-item relative w-full">
                   <img src="Images/1.png" class="w-full" />
@@ -68,7 +68,53 @@
         </section>
     </header>
     <main>
-
+        <!-- rounded progress section -->
+        <section class="my-20">
+            <div>
+                <div class="text-center">
+                    <h3 class="text-4xl text-[#131318] font-extrabold">Professional Hockeys Club</h3>
+                    <p class="text-[#131318] py-3">Rounded progress var is added to our service batter and we are promised to provide <br> our service well</p>
+                </div>
+               <div class="flex justify-center py-7">
+                <!-- first progress bar -->
+                    <div class="text-center space-x-8">
+                        <div class="radial-progress text-primary" style="--value:40;" role="progressbar">40%
+                        </div>
+                        <div>
+                            <h3 class="text-[#131318] text-xl font-bold">Prayer Facility</h3>
+                            <p class="w-[250px] mx-auto">Amet consectetur. Condimentum dignissim adipiscing .</p>
+                        </div>
+                    </div>
+                <!-- second progress bar -->
+                    <div class="text-center space-x-8">
+                        <div class="radial-progress text-primary" style="--value:40;" role="progressbar">40%
+                        </div>
+                        <div>
+                            <h3 class="text-[#131318] text-xl font-bold">Prayer Facility</h3>
+                            <p class="w-[250px] mx-auto">Amet consectetur. Condimentum dignissim adipiscing .</p>
+                        </div>
+                    </div>
+                <!-- third progress bar -->
+                    <div class="text-center space-x-8">
+                        <div class="radial-progress text-primary" style="--value:40;" role="progressbar">40%
+                        </div>
+                        <div>
+                            <h3 class="text-[#131318] text-xl font-bold">Prayer Facility</h3>
+                            <p class="w-[250px] mx-auto">Amet consectetur. Condimentum dignissim adipiscing .</p>
+                        </div>
+                    </div>
+                <!-- forth progress bar -->
+                    <div class="text-center space-x-8">
+                        <div class="radial-progress text-primary" style="--value:40;" role="progressbar">40%
+                        </div>
+                        <div>
+                            <h3 class="text-[#131318] text-xl font-bold">Prayer Facility</h3>
+                            <p class="w-[250px] mx-auto">Amet consectetur. Condimentum dignissim adipiscing .</p>
+                        </div>
+                    </div>
+               </div>
+            </div>
+        </section>
     </main>
     <footer>
 
