program section added

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <nav>
             <div class="flex flex-row items-center  lg:justify-around my-6">
                 <div class="text-4xl text-[#131318] font-extrabold">
-                    <h2>Hockey <span class="text-red-600">’</span>s</h2>
+                    <h2>Hockey<span class="text-red-600">’</span>s</h2>
                 </div>
                 <div class="space-x-4">
                     <a class="text-red-500" href="#">Home</a>
@@ -113,6 +113,49 @@
                         </div>
                     </div>
                </div>
+            </div>
+        </section>
+        <!-- program section -->
+        <section>
+            <div>
+                <div class="text-center">
+                    <h3 class="text-4xl text-[#131318] font-extrabold">Program Sections</h3>
+                    <p class="text-[#131318] py-3">Rounded progress var is added to our service batter and we are promised to provide <br> our service well</p>
+                </div>
+                <!-- first program -->
+                <div class="flex gap-6 justify-center py-6">
+                    <div class="relative">
+                        <img src="Images/2.png" alt="">
+                        <div class="absolute top-[30%] p-6">
+                            <h3 class="text-white text-3xl font-extrabold">Junior Program</h3>
+                            <p class="font-semibold text-white py-6">In this program we will teach you,
+                                <br> how to start playing hockey.stay humble learn more.</p>
+                             <button class="bg-[#FF4240] text-white py-3 px-12 rounded-lg"> Get Ticket  </button>   
+                        </div>
+                    </div>
+                    <!-- second program -->
+                    <div class="relative">
+                        <img src="Images/3.png" alt="">
+                        <div class="absolute top-[30%] p-6">
+                            <h3 class="text-white text-3xl font-extrabold">Junior Program</h3>
+                            <p class="font-semibold text-white py-6">In this program we will teach you,
+                                <br> how to start playing hockey.stay humble learn more.</p>
+                             <button class="bg-[#FF4240] text-white py-3 px-12 rounded-lg"> Get Ticket  </button>   
+                        </div>
+                    </div>
+                </div>
+                <!-- third program -->
+                <div class="flex justify-center">
+                    <div class="relative">
+                        <img src="Images/4.png" alt="">
+                        <div class="absolute top-[30%] p-6">
+                            <h3 class="text-white text-3xl font-extrabold">Junior Program</h3>
+                            <p class="font-semibold text-white py-6">In this program we will teach you,
+                                <br> how to start playing hockey.stay humble learn more.</p>
+                             <button class="bg-[#FF4240] text-white py-3 px-12 rounded-lg"> Get Ticket  </button>   
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
     </main>
