new product section added

--- a/index.html
+++ b/index.html
@@ -119,11 +119,11 @@
         <section>
             <div>
                 <div class="text-center">
-                    <h3 class="text-4xl text-[#131318] font-extrabold">Program Sections</h3>
-                    <p class="text-[#131318] py-3">Rounded progress var is added to our service batter and we are promised to provide <br> our service well</p>
+                    <h3 class=" text-2xl lg:text-4xl text-[#131318] font-extrabold">Program Sections</h3>
+                    <p class="lg:w-[700px] w-[300px] mx-auto text-[#131318] py-3">Rounded progress var is added to our service batter and we are promised to provide <br> our service well</p>
                 </div>
                 <!-- first program -->
-                <div class="flex gap-6 justify-center py-6">
+                <div class="lg:flex gap-6 justify-center py-6">
                     <div class="relative">
                         <img src="Images/2.png" alt="">
                         <div class="absolute top-[30%] p-6">
@@ -148,7 +148,7 @@
                 <div class="flex justify-center">
                     <div class="relative">
                         <img src="Images/4.png" alt="">
-                        <div class="absolute top-[30%] p-6">
+                        <div class="absolute top-[40%] p-6">
                             <h3 class="text-white text-3xl font-extrabold">Junior Program</h3>
                             <p class="font-semibold text-white py-6">In this program we will teach you,
                                 <br> how to start playing hockey.stay humble learn more.</p>
@@ -156,6 +156,175 @@
                         </div>
                     </div>
                 </div>
+            </div>
+        </section>
+        <!-- New product section -->
+        <section>
+            <div class="py-7">
+                <div class="text-center py-8">
+                    <h3 class=" text-2xl lg:text-4xl text-[#131318] font-extrabold">Program Sections</h3>
+                    <p class="lg:w-[700px] w-[300px] mx-auto text-[#131318] py-3">Rounded progress var is added to our service batter and we are promised to provide <br> our service well</p> <hr>
+                </div>
+                <!-- card container -->
+                <div class="flex justify-center items-center gap-7">
+                    <!-- first card content -->
+                    <div class="space-y-7">
+                        <!-- first card -->
+                        <div class="flex items-center gap-3 bg-slate-50 p-6 rounded-3xl">
+                    <div>
+                        <img src="Images/7.png" alt="">
+                    </div>
+                    <div>
+                        <div class="flex gap-1 items-center">
+                            <i class=" text-orange-500 fa-solid fa-star"></i>
+                            <p class="pr-3">5.0</p>
+                            <i class="fa-regular fa-eye"></i>
+                            <p class="pr-3">20</p>
+                            <i class="fa-regular fa-heart"></i>
+                            <p>200</p>
+                        </div>
+                        <div>
+                            <h3 class="py-2 text-[#131318] font-extrabold text-2xl">World Cup Flags Football</h3>
+                            <p>Dolor sit amet consectetur. Ut urna diam quis sagittis. </p>
+                        </div>
+                        <div class="flex items-center gap-2">
+                            <p class="text-[#FF4240] font-extrabold py-2 pr-3">Price - $22.00</p>
+                            <i class="fa-solid fa-cart-shopping"></i>
+                            <p>Delivery Fee : Free</p>
+                        </div>
+                    </div>
+                         </div>
+                        <!-- 2nd card -->
+                        <div class="flex items-center gap-3 bg-slate-50 p-6 rounded-3xl">
+                    <div>
+                        <img src="Images/9.png" alt="">
+                    </div>
+                    <div>
+                        <div class="flex gap-1 items-center">
+                            <i class=" text-orange-500 fa-solid fa-star"></i>
+                            <p class="pr-3">5.0</p>
+                            <i class="fa-regular fa-eye"></i>
+                            <p class="pr-3">20</p>
+                            <i class="fa-regular fa-heart"></i>
+                            <p>200</p>
+                        </div>
+                        <div>
+                            <h3 class="py-2 text-[#131318] font-extrabold text-2xl">World Cup Flags Football</h3>
+                            <p>Dolor sit amet consectetur. Ut urna diam quis sagittis. </p>
+                        </div>
+                        <div class="flex items-center gap-2">
+                            <p class="text-[#FF4240] font-extrabold py-2 pr-3">Price - $22.00</p>
+                            <i class="fa-solid fa-cart-shopping"></i>
+                            <p>Delivery Fee : Free</p>
+                        </div>
+                    </div>
+                         </div>
+                        <!-- 3rd card -->
+                        <div class="flex items-center gap-3 bg-slate-50 p-6 rounded-3xl">
+                    <div>
+                        <img src="Images/5.png" alt="">
+                    </div>
+                    <div>
+                        <div class="flex gap-1 items-center">
+                            <i class=" text-orange-500 fa-solid fa-star"></i>
+                            <p class="pr-3">5.0</p>
+                            <i class="fa-regular fa-eye"></i>
+                            <p class="pr-3">20</p>
+                            <i class="fa-regular fa-heart"></i>
+                            <p>200</p>
+                        </div>
+                        <div>
+                            <h3 class="py-2 text-[#131318] font-extrabold text-2xl">World Cup Flags Football</h3>
+                            <p>Dolor sit amet consectetur. Ut urna diam quis sagittis. </p>
+                        </div>
+                        <div class="flex items-center gap-2">
+                            <p class="text-[#FF4240] font-extrabold py-2 pr-3">Price - $22.00</p>
+                            <i class="fa-solid fa-cart-shopping"></i>
+                            <p>Delivery Fee : Free</p>
+                        </div>
+                    </div>
+                         </div>
+                    </div>
+                    <!-- second card content -->
+                    <div class="space-y-7">
+                        <!-- first card -->
+                        <div class="flex items-center gap-3 bg-slate-50 p-6 rounded-3xl">
+                      <div>
+                        <img src="Images/6.png" alt="">
+                     </div>
+                     <div>
+                        <div class="flex gap-1 items-center">
+                            <i class=" text-orange-500 fa-solid fa-star"></i>
+                            <p class="pr-3">5.0</p>
+                            <i class="fa-regular fa-eye"></i>
+                            <p class="pr-3">20</p>
+                            <i class="fa-regular fa-heart"></i>
+                            <p>200</p>
+                        </div>
+                        <div>
+                            <h3 class="py-2 text-[#131318] font-extrabold text-2xl">World Cup Flags Football</h3>
+                            <p>Dolor sit amet consectetur. Ut urna diam quis sagittis. </p>
+                        </div>
+                        <div class="flex items-center gap-2">
+                            <p class="text-[#FF4240] font-extrabold py-2 pr-3">Price - $22.00</p>
+                            <i class="fa-solid fa-cart-shopping"></i>
+                            <p>Delivery Fee : Free</p>
+                        </div>
+                    </div>
+                        </div>
+                        <!-- 2nd card -->
+                        <div class="flex items-center gap-3 bg-slate-50 p-6 rounded-3xl">
+                      <div>
+                        <img src="Images/8.png" alt="">
+                     </div>
+                     <div>
+                        <div class="flex gap-1 items-center">
+                            <i class=" text-orange-500 fa-solid fa-star"></i>
+                            <p class="pr-3">5.0</p>
+                            <i class="fa-regular fa-eye"></i>
+                            <p class="pr-3">20</p>
+                            <i class="fa-regular fa-heart"></i>
+                            <p>200</p>
+                        </div>
+                        <div>
+                            <h3 class="py-2 text-[#131318] font-extrabold text-2xl">World Cup Flags Football</h3>
+                            <p>Dolor sit amet consectetur. Ut urna diam quis sagittis. </p>
+                        </div>
+                        <div class="flex items-center gap-2">
+                            <p class="text-[#FF4240] font-extrabold py-2 pr-3">Price - $22.00</p>
+                            <i class="fa-solid fa-cart-shopping"></i>
+                            <p>Delivery Fee : Free</p>
+                        </div>
+                    </div>
+                        </div>
+                        <!-- 3rd card -->
+                        <div class="flex items-center gap-3 bg-slate-50 p-6 rounded-3xl">
+                      <div>
+                        <img src="Images/10.png" alt="">
+                     </div>
+                     <div>
+                        <div class="flex gap-1 items-center">
+                            <i class=" text-orange-500 fa-solid fa-star"></i>
+                            <p class="pr-3">5.0</p>
+                            <i class="fa-regular fa-eye"></i>
+                            <p class="pr-3">20</p>
+                            <i class="fa-regular fa-heart"></i>
+                            <p>200</p>
+                        </div>
+                        <div>
+                            <h3 class="py-2 text-[#131318] font-extrabold text-2xl">World Cup Flags Football</h3>
+                            <p>Dolor sit amet consectetur. Ut urna diam quis sagittis. </p>
+                        </div>
+                        <div class="flex items-center gap-2">
+                            <p class="text-[#FF4240] font-extrabold py-2 pr-3">Price - $22.00</p>
+                            <i class="fa-solid fa-cart-shopping"></i>
+                            <p>Delivery Fee : Free</p>
+                        </div>
+                    </div>
+                        </div>
+                    </div>
+                </div>
+                
             </div>
         </section>
     </main>
