get in touch section added

--- a/index.html
+++ b/index.html
@@ -327,6 +327,134 @@
                 
             </div>
         </section>
+        <!-- client-accordion section -->
+        <section>
+            <div class="text-center py-8">
+                <h3 class=" text-2xl lg:text-4xl text-[#131318] font-extrabold">Clients Question</h3>
+                <p class="lg:w-[700px] w-[300px] mx-auto text-[#131318] py-3">Rounded progress var is added to our service batter and we are promised to provide <br> our service well</p> <hr>
+            </div>
+            <div class="flex mx-auto items-center justify-center gap-12">
+                <div>
+                    <img class="w-80" src="Images/11.png" alt="">
+                </div>
+                <!-- accordion section -->
+                <div class="w-[600px] my-7">
+                    <div class="collapse collapse-plus">
+                        <input type="radio" name="my-accordion-3" checked="checked" /> 
+                        <div class="collapse-title text-xl font-medium border-b-2">
+                            Our Equipment
+                        </div>
+                        <div class="collapse-content"> 
+                          <p>hello</p>
+                        </div>
+                      </div>
+                      <div class="collapse collapse-plus">
+                        <input type="radio" name="my-accordion-3" /> 
+                        <div class="collapse-title text-xl font-medium border-b-2">
+                            Hockey Training
+                        </div>
+                        <div class="collapse-content"> 
+                          <p>hello</p>
+                        </div>
+                      </div>
+                      <div class="collapse collapse-plus">
+                        <input type="radio" name="my-accordion-3" /> 
+                        <div class="collapse-title text-xl font-medium border-b-2">
+                            Private Lessons
+                        </div>
+                        <div class="collapse-content"> 
+                          <p>hello</p>
+                        </div>
+                      </div>
+                      <div class="collapse collapse-plus">
+                        <input type="radio" name="my-accordion-3" /> 
+                        <div class="collapse-title text-xl font-medium border-b-2">
+                            PSki Touring
+                        </div>
+                        <div class="collapse-content"> 
+                          <p>hello</p>
+                        </div>
+                      </div>
+                      <div class="collapse collapse-plus">
+                        <input type="radio" name="my-accordion-3" /> 
+                        <div class="collapse-title text-xl font-medium border-b-2">
+                            Booking
+                        </div>
+                        <div class="collapse-content"> 
+                          <p>hello</p>
+                        </div>
+                      </div>
+                      <div class="collapse collapse-plus">
+                        <input type="radio" name="my-accordion-3" /> 
+                        <div class="collapse-title text-xl font-medium border-b-2">
+                            Pricingss
+                        </div>
+                        <div class="collapse-content"> 
+                          <p>hello</p>
+                        </div>
+                      </div>
+                </div>
+            </div>
+        </section>
+        <!-- get in touch section -->
+        <section class="">
+           <div>
+                <div class="text-center py-8">
+                    <h3 class=" text-2xl lg:text-4xl text-[#131318] font-extrabold">Get In Touch</h3>
+                    <p class="lg:w-[700px] w-[300px] mx-auto text-[#131318] py-3">Rounded progress var is added to our service batter and we are promised to provide <br> our service well</p> <hr>
+                </div>
+                <div class="flex justify-center items-center gap-4">
+                    <div>
+                        <!-- first touch -->
+                        <div class=" py-9 pr-28 pl-8 bg-[#E3F2FD] my-5">
+                            <i class="fa-solid fa-phone text-4xl text-green-500"></i>
+                            <p class="pt-4 text-[ #131318]" >Phone Number : <br>
+                                <span class="font-extrabold text-[#131318]">(+62) 123-321-543</span></p>
+                        </div>
+                        <!-- 2nd touch -->
+                        <div class=" py-9 pr-28 pl-8 bg-[#fddd5f1a]">
+                            <i class="fa-solid fa-phone text-4xl text-green-500"></i>
+                            <p class="pt-4 text-[ #131318]" >Phone Number : <br>
+                                <span class="font-extrabold text-[#131318]">(+62) 123-321-543</span></p>
+                        </div>
+                        <!-- 3rd touch -->
+                        <div class=" py-9 pr-28 pl-8 bg-[#bced6d1a]">
+                            <i class="fa-solid fa-phone text-4xl text-green-500"></i>
+                            <p class="pt-4 text-[ #131318]" >Phone Number : <br>
+                                <span class="font-extrabold text-[#131318]">(+62) 123-321-543</span></p>
+                        </div>
+                    </div>
+                    <div>
+                        <div class="">
+                            <div class="hero-content flex-col lg:flex-row-reverse">
+                            <div class="card shrink-0 w-full max-w-sm bg-base-100">
+                                <form class="card-body">
+                                <div class="form-control">
+                                    <label class="label">
+                                    <span class="label-text">Email</span>
+                                    </label>
+                                    <input type="email" placeholder="email" class="input input-bordered" required />
+                                </div>
+                                <div class="form-control">
+                                    <label class="label">
+                                    <span class="label-text">Password</span>
+                                    </label>
+                                    <input type="password" placeholder="password" class="input input-bordered" required />
+                                    <label class="label">
+                                    <a href="#" class="label-text-alt link link-hover">Forgot password?</a>
+                                    </label>
+                                </div>
+                                <div class="form-control mt-6">
+                                    <button class="btn btn-primary">Login</button>
+                                </div>
+                                </form>
+                            </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+           </div>
+        </section>
     </main>
     <footer>
 
