social media section added

--- a/index.html
+++ b/index.html
@@ -406,7 +406,7 @@
                 <div class="flex justify-center items-center gap-4">
                     <div>
                         <!-- first touch -->
-                        <div class=" py-9 pr-28 pl-8 bg-[#E3F2FD] my-5">
+                        <div class=" py-9 pr-28 pl-8 bg-[#bced6d1a] my-5">
                             <i class="fa-solid fa-phone text-4xl text-green-500"></i>
                             <p class="pt-4 text-[ #131318]" >Phone Number : <br>
                                 <span class="font-extrabold text-[#131318]">(+62) 123-321-543</span></p>
@@ -418,7 +418,7 @@
                                 <span class="font-extrabold text-[#131318]">(+62) 123-321-543</span></p>
                         </div>
                         <!-- 3rd touch -->
-                        <div class=" py-9 pr-28 pl-8 bg-[#bced6d1a]">
+                        <div class=" py-9 pr-28 pl-8 bg-[#E3F2FD]">
                             <i class="fa-solid fa-phone text-4xl text-green-500"></i>
                             <p class="pt-4 text-[ #131318]" >Phone Number : <br>
                                 <span class="font-extrabold text-[#131318]">(+62) 123-321-543</span></p>
@@ -454,6 +454,16 @@
                     </div>
                 </div>
            </div>
+        </section>
+        <!-- social icon section -->
+        <section class="bg-[#13131808] my-8 text-center py-10">
+            <h3 class="font-extrabold text-[#131318] text-2xl">Social Media</h3>
+               <div class="space-x-4 pt-6">
+                <i class="fa-brands fa-twitter"></i>
+                <i class="fa-brands fa-facebook"></i>
+                <i class="fa-brands fa-instagram"></i>
+                <i class="fa-brands fa-github"></i>
+               </div>
         </section>
     </main>
     <footer>
