footer section added

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         }
     </style>
 </head>
-<body class="manrope-font container mx-auto ">
-    <header>
+<body class="manrope-font">
+    <header class="container mx-auto">
         <nav>
             <div class="flex flex-row items-center  lg:justify-around my-6">
                 <div class="text-4xl text-[#131318] font-extrabold">
@@ -67,7 +67,7 @@
               </div>
         </section>
     </header>
-    <main>
+    <main class="container mx-auto">
         <!-- rounded progress section -->
         <section class="my-20">
             <div>
@@ -466,8 +466,41 @@
                </div>
         </section>
     </main>
-    <footer>
 
-    </footer>
+    <footer class="footer p-10 bg-[#131318] text-white">
+        <nav>
+          <header class="text-3xl font-bold">Get In Touch</header> 
+          <p>Dit amet consectetur.  Condimentum <br> adipiscing aliquam turpis placerat dolor. <br> Purus urna in sit nullam proin. </p>
+        </nav> 
+        <nav>
+          <header class="footer-title">Company</header> 
+          <a class="link link-hover">About us</a>
+          <a class="link link-hover">Contact</a>
+          <a class="link link-hover">Jobs</a>
+          <a class="link link-hover">Press kit</a>
+        </nav> 
+        <nav>
+          <header class="footer-title">Support</header> 
+          <a class="link link-hover">Terms of use</a>
+          <a class="link link-hover">Privacy policy</a>
+          <a class="link link-hover">Cookie policy</a>
+        </nav>
+        <nav>
+          <header class="footer-title">Services</header> 
+          <a class="link link-hover">Terms of use</a>
+          <a class="link link-hover">Privacy policy</a>
+          <a class="link link-hover">Cookie policy</a>
+        </nav>
+      </footer> 
+      <footer class="px-10 pb-10 bg-[#131318] space-y-4 text-white">
+        <aside class="flex items-center gap-2">
+            <i class="fa-solid fa-envelope text-red-600"></i>
+          <p class="text-sm">hockeys@support.com</p>
+        </aside> 
+        <aside class="flex items-center gap-2">
+            <i class="fa-solid fa-phone text-red-600"></i>
+          <p class="text-sm">(+62) 123-321-543</p>
+        </aside> <hr>
+      </footer>
 </body>
 </html>
