--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
   </head>
   <body class="manrope-font">
     <header class="container mx-auto">
-      <nav>
-        <div class="lg:flex space-y-4` flex-row items-center lg:justify-around my-6">
+      <nav class="text-center">
+        <div class="lg:flex space-y-4 items-center lg:justify-around my-6">
           <div class="text-4xl text-[#131318] font-extrabold">
             <h2>Hockey<span class="text-red-600">’</span>s</h2>
           </div>
@@ -56,7 +56,7 @@
       <section class="py-8">
         <div class="carousel lg:h-[70vh]">
           <div id="slide1" class="carousel-item relative lg:w-full">
-            <img src="Images/1.png" class=" lg:w-full" />
+            <img src="Images/1.png" class="w-[550px] lg:w-full" />
             <div
               class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2"
             >
@@ -176,7 +176,7 @@
         </div>
       </section>
       <!-- program section -->
-      <section>
+      <section class="my-10">
         <div>
           <div class="text-center">
             <h3 class="text-2xl lg:text-4xl text-[#131318] font-extrabold">
@@ -189,7 +189,7 @@
             </p>
           </div>
           <!-- first program -->
-          <div class="lg:flex gap-6 justify-center py-6">
+          <div class="lg:flex gap-6 justify-center py-8 ">
             <div class="relative">
               <img src="Images/2.png" alt="" />
               <div class="absolute top-[30%] p-6">
@@ -206,7 +206,7 @@
               </div>
             </div>
             <!-- second program -->
-            <div class="relative">
+            <div class="relative ">
               <img src="Images/3.png" alt="" />
               <div class="absolute top-[30%] p-6">
                 <h3 class="text-white text-3xl font-extrabold">
@@ -224,9 +224,9 @@
           </div>
           <!-- third program -->
           <div class="flex justify-center">
-            <div class="relative">
+            <div class="relative pt-5">
               <img src="Images/4.png" alt="" />
-              <div class="absolute top-[40%] p-6">
+              <div class="absolute top-[30%] lg:top-[40%] p-6">
                 <h3 class="text-white text-3xl font-extrabold">
                     Professional Program
                 </h3>
@@ -243,7 +243,7 @@
         </div>
       </section>
       <!-- New product section -->
-      <section>
+      <section class="my-10">
         <div class="py-7">
           <div class="text-center py-8">
             <h3 class="text-2xl lg:text-4xl text-[#131318] font-extrabold">
@@ -454,7 +454,7 @@
         </div>
       </section>
       <!-- client-accordion section -->
-      <section>
+      <section class="my-10">
         <div class="text-center py-8">
           <h3 class="text-2xl lg:text-4xl text-[#131318] font-extrabold">
             Clients Question
@@ -530,7 +530,7 @@
         </div>
       </section>
       <!-- get in touch section -->
-      <section class="">
+      <section class="my-10">
           <div class="text-center py-8">
             <h3 class="text-2xl lg:text-4xl text-[#131318] font-extrabold">
               Get In Touch
@@ -644,7 +644,7 @@
           </div>
       </section>
       <!-- social icon section -->
-      <section class="bg-[#13131808] my-8 text-center py-10">
+      <section class="bg-[#13131808] my-10 text-center py-10">
         <h3 class="font-extrabold text-[#131318] text-2xl">Social Media</h3>
         <div class="space-x-4 pt-6">
           <i class="fa-brands fa-twitter"></i>
