--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         </div>
       </nav>
       <!-- carousel section -->
-      <section class="py-8">
+      <section class="py-8 relative">
         <div class="carousel lg:h-[70vh]">
           <div id="slide1" class="carousel-item relative lg:w-full">
             <img src="Images/1.png" class="w-[550px] lg:w-full" />
@@ -82,6 +82,10 @@
               <a href="#slide4" class="btn btn-circle">❯</a>
             </div>
           </div>
+        </div>
+        <div class="bg-[#131318] rounded-xl p-8 w-[500px] lg:absolute right-0 top-[60%] mr-8">
+          <h3 class="text-white text-2xl font-extrabold">Meet all the heroes from the field</h3>
+          <p class="text-[#696464]">Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin. </p>
         </div>
       </section>
     </header>
